--- a/adminRN/package.json
+++ b/adminRN/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.41.0",
     "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
+    "formik": "^2.4.6",
     "headlessui": "^0.0.0",
     "js-cookie": "^3.0.5",
     "jsvectormap": "^1.5.3",
@@ -24,8 +25,9 @@
     "react-icons": "^4.10.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.14.2",
-    "react-toastify": "^9.1.3",
-    "sort-by": "^0.0.2"
+    "react-toastify": "^10.0.6",
+    "sort-by": "^0.0.2",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
